--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,50 @@
+# See https://www.scala-sbt.org/1.0/docs/Travis-CI-with-sbt.html
+
+sudo: false
+
 language: scala
 
 scala:
   - 2.12.7
 
-jdk:
-  - oraclejdk8
+jdk: oraclejdk8
+
+stages:
+  - name: test
+  - name: release
+    if: (branch = master AND type = push) OR (tag IS present)
+
+jobs:
+  include:
+    - env: TEST="scalafmt --check - Using fmtcheck"
+      name: "Formatting checks"
+      script: sbt fmtcheck
+    - env: TEST="scalastyle - Using stylecheck"
+      name: "Style Checks"
+      script: sbt stylecheck
+    - env: TEST="scalafix --check - Using fixcheck"
+      name: "Extended style checks"
+      script: sbt fixcheck
+    - env: TEST="compile"
+      name: "Compile"
+      script: sbt compile
+    - stage: release
+      script: sbt ci-release
+
+cache:
+  directories:
+    - $HOME/.sbt/1.0/dependency
+    - $HOME/.sbt/boot/scala*
+    - $HOME/.sbt/launchers
+    - $HOME/.ivy2/cache
+    - $HOME/.coursier
+
+before_cache:
+  - du -h -d 1 $HOME/.ivy2/cache
+  - du -h -d 2 $HOME/.sbt/
+  - find $HOME/.sbt -name "*.lock" -type f -delete
+  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -type f -delete
+  - rm -rf $HOME/.ivy2/local
+
+before_install:
+  - git fetch --tags
