--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,9 @@ jobs:
     - env: TEST="compile"
       name: "Compile"
       script: sbt compile
+    - env: TEST="test"
+      name: "Unit tests"
+      script: sbt test
     - stage: release
       script: sbt ci-release
 
