--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,5 +9,6 @@ sonar.tests=src/test/scala
 sonar.scala.version=2.12
 
 sonar.scala.coverage.reportPath=target/scala-2.12/scoverage-report/scoverage.xml
+sonar.scapegoat.reportPath=target/scala-2.12/scapegoat-report/scapegoat.xml
 
 sonar.sourceEncoding=UTF-8
