Update the sonar scoverage path

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,6 @@ sonar.tests=src/test/scala
 
 sonar.scala.version=2.12
 
-sonar.scoverage.reportPath=target/scala-2.12/scoverage-report/scoverage.xml
+sonar.scala.coverage.reportPath=target/scala-2.12/scoverage-report/scoverage.xml
 
 sonar.sourceEncoding=UTF-8
