--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.tests=src/test/scala
 
 sonar.scala.version=2.12
 
-sonar.scala.coverage.reportPath=target/scala-2.12/scoverage-report/scoverage.xml
+sonar.scoverage.reportPath=target/scala-2.12/scoverage-report/scoverage.xml
 sonar.scapegoat.reportPath=target/scala-2.12/scapegoat-report/scapegoat.xml
 
 sonar.sourceEncoding=UTF-8
