--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=ChocPanda_argonaut-magnolia
+sonar.projectVersion=0
 
 sonar.projectName=Argonaut Magnolia
 sonar.host.url=https://sonarcloud.io
