--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ jobs:
       name: "Unit tests"
       script: bash scripts/run-ci-tests.sh
     - stage: report
+      env: SONAR_SCANNER_HOME="${TRAVIS_HOME}/.sonarscanner"
       script: sbt sonarScan
     - stage: release
       script: sbt ci-release
