--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ scala:
 
 jdk: oraclejdk8
 
+addons:
+  sonarcloud:
+    organization: chocpanda-github
+
 stages:
   - name: test
   - name: report
@@ -33,6 +37,7 @@ jobs:
       name: "Unit tests"
       script: bash scripts/run-ci-tests.sh
     - stage: report
+      env: SONAR_SCANNER_HOME="${TRAVIS_HOME}/.sonarscanner/sonar-scanner-3.0.3.778"
       script: sbt sonarScan
     - stage: release
       script: sbt ci-release
@@ -54,7 +59,3 @@ before_cache:
 
 before_install:
   - git fetch --tags
-
-addons:
-  sonarcloud:
-    organization: chocpanda-github
