--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ sudo: false
 language: scala
 
 scala:
-  - 2.12.7
-
-jdk: oraclejdk8
+  - 2.12.10
+  - 2.13.0
 
 addons:
   sonarcloud:
@@ -32,7 +31,7 @@ jobs:
       script: sbt fixcheck && sbt scapegoat
     - env: TEST="compile"
       name: "Compile"
-      script: sbt compile
+      script: sbt ++$TRAVIS_SCALA_VERSION compile
     - env: TEST="test"
       name: "Unit tests"
       script: bash scripts/run-ci-tests.sh
@@ -40,7 +39,7 @@ jobs:
       env: SONAR_SCANNER_HOME="${TRAVIS_HOME}/.sonarscanner/sonar-scanner-3.0.3.778"
       script: sbt sonarScan
     - stage: release
-      script: sbt ci-release
+      script: sbt ++$TRAVIS_SCALA_VERSION ci-release
 
 cache:
   directories:
